<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".HeightWeightActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar"
        >

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:menu="@menu/top_menu"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skip"
                android:textColor="@color/white"
                android:layout_marginStart="250dp"
                />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <TextView
        android:id="@+id/gender_heading"
        android:layout_below="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_marginTop="40sp"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/gender_desc"
        android:layout_below="@+id/gender_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gender_desc"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_marginTop="14sp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="50dp"
        />

    <View
        android:id="@+id/view_height"
        android:layout_below="@id/gender_desc"
        android:layout_width="match_parent"
        android:layout_height="1dp"
       android:background="@color/white"
        />

    <RelativeLayout
        android:id="@+id/user_height"
        android:layout_below="@id/view_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/height157"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/h_157"
            android:textAlignment="center"
            android:textStyle="italic"
            android:textSize="20sp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/dark_blue"
            android:layout_margin="5sp"
            />

        <TextView
            android:id="@+id/height158"
            android:layout_below="@+id/height157"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/h_158"
            android:textAlignment="center"
            android:textStyle="italic"
            android:textSize="25sp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/light_blue"
            android:layout_margin="5sp"
            />

        <TextView
            android:id="@+id/text_height"
            android:layout_below="@id/height158"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/text_height"
            android:layout_margin="10sp"
            />

        <TextView
            android:id="@+id/height159"
            android:layout_below="@+id/height158"
            android:layout_toEndOf="@id/text_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/h_159"
            android:textStyle="italic"
            android:textSize="35sp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/white"
           android:layout_marginStart="60dp"
            />

        <ImageView
            android:id="@+id/height_icon"
            android:layout_below="@id/height158"
            android:layout_toEndOf="@id/height159"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:src="@drawable/check"
           android:layout_margin="10sp"

            />

        <TextView
            android:id="@+id/height160"
            android:layout_below="@+id/height159"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/h_160"
            android:textAlignment="center"
            android:textStyle="italic"
            android:textSize="25sp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/light_blue"
            android:layout_margin="5sp"
            />

        <TextView
            android:id="@+id/height161"
            android:layout_below="@+id/height160"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/h_161"
            android:textAlignment="center"
            android:textStyle="italic"
            android:textSize="20sp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/dark_blue"
            android:layout_margin="5sp"
            />

        <View
            android:id="@+id/view_weight"
            android:layout_below="@id/height161"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"
            />

        <RelativeLayout
            android:id="@+id/user_weight"
            android:layout_below="@+id/view_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/text_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/weight"
                android:layout_margin="10sp"
                />

            <TextView
                android:id="@+id/weight"
                android:layout_toEndOf="@id/text_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/w_58"
                android:textStyle="italic"
                android:textSize="35sp"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/white"
                android:layout_marginStart="60dp"
                />

            <ImageView
                android:layout_toEndOf="@id/weight"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:src="@drawable/check"
                android:layout_margin="10sp"

                />

        </RelativeLayout>

        <View
            android:id="@+id/view_last"
            android:layout_below="@id/user_weight"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"
            />

        <Button
            android:id="@+id/btn_continue"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_last"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/blue"
            android:background="@drawable/button_shape"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/black"
            android:text="@string/btn_continue" />
    </RelativeLayout>



</RelativeLayout>