<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/girl_image_gym"
    tools:context=".LandingPageActivity">

    <RelativeLayout
        android:id="@+id/heading_befit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/be_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="500dp"
            android:text="@string/be"
            android:textColor="@color/white"
            android:textSize="45sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="500dp"
            android:layout_toEndOf="@+id/be_text"
            android:text="@string/fit"
            android:textColor="@color/blue"
            android:textSize="45sp"
            android:textStyle="bold" />


    </RelativeLayout>

       <TextView
           android:id="@+id/para"
           android:layout_below="@+id/heading_befit"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/pocket_para"
           android:textColor="@color/blue"
           android:textAlignment="center"
           android:textSize="25sp"
           android:textStyle="bold"
           />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/para"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/blue"
        android:background="@drawable/button_shape"
        android:gravity="center"
        android:padding="15dp"
        android:textColor="@color/black"
        android:text="@string/started" />


</RelativeLayout>